Misc changes/fixes
Logi Request related:
- Logi Request header bar now has a count of how many crates are in an order and how many have been picked by drivers
- Individual driver production card header now has a count of how many crates have been picked and the header turns green once a driver has selected 15 crates
- Log section now shows who created the order
Other:
- OP Timer box: fix vertical mis-alignment, added small space between date & time boxes
- Listings of users who are online and offline can now be hidden if desired

--- a/src/_styles/global.css
+++ b/src/_styles/global.css
@@ -453,9 +453,47 @@ display: inline-block;
 margin:0px;
 max-width:100%
 }
-.usertable
-{margin-top: 26px;
- width: 100%;
+.usertable_heading{
+  display: flex;
+  align-items: center;
+  border-color: #212529;
+  margin: 9px 0 0;
+  color: white;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.user_panel > .usertable_heading:first-child {
+  margin-top: 28px;
+}
+.usertable_heading > span {
+  flex-grow: 1;
+  text-align: left;
+  padding-left: 5px;
+  font-size: 16px;
+}
+.usertable_heading_btn {
+  width: 24px;
+  height: 24px;
+  font-size: 22px;
+  margin: 3px;
+  padding: 0 0 4px;
+  line-height: 16px;
+  background: #606060;
+  border: 1px solid #111;
+  color: white;
+}
+.usertable_heading_btn:focus{
+  outline: none;
+}
+.usertable_heading_btn:hover,
+.usertable_heading:hover .usertable_heading_btn {
+  border-color: white;
+}
+.usertable {
+  width: 100%;
+  height: initial;
+  margin-top: 4px;
 }
 
 #usertableoffline
@@ -600,6 +638,11 @@ resize:none;
 .card_ambush_0cell{
 text-align:left;
   min-width:100%;
+}
+.card_crate_count_cell{
+width: 55px;
+white-space: nowrap;
+padding: 0 6px;
 }
 
 #general-modal{
@@ -1124,13 +1167,33 @@ height: 17px;}
   display:inline-grid
 }
 .other_production_cardheader{
-  min-width:100%;
-  text-align:left
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  min-width: 100%;
+  text-align: left;
+  padding: 0 4px;
 }
-
 .other_production_headertext{
-vertical-align:top;
+  flex-grow: 1;
+  vertical-align: top;
   font-size: 14px;
+}
+.other_production_amount{
+  min-width: 48px;
+  text-align: center;
+}
+.requestmodal_production_header {
+  display: flex;
+  align-items: center;
+  margin-left: 52px;
+}
+.requestmodal_production_heading {
+  min-width: 122px;
+}
+.requestmodal_production_amt {
+  min-width: 45px;
+  margin-left: -5px;
 }
 .other_production_left{
 margin-right:5px;
@@ -1444,8 +1507,8 @@ animation: fade8in 0.4s;
 }
 
 #op_timer_inputmask{
-   margin-top: 10px;
- font-size: 12px;
+  margin-left: 3px;
+  font-size: 12px;
   width: 40px;
   border: 0px;
   padding-left: 4px;
