--- a/src/_styles/style.css
+++ b/src/_styles/style.css
@@ -47,9 +47,6 @@ text-align:right;
 }
 .btn.TopBtn{
 margin: 0px;}
-.usertable{
-margin-top: 20px;
-  }
 #metacontainer{
 margin: 0px;
 text-align: right;}
